// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icontwitter renders with different colours 1`] = `
Array [
  <title>
    Twitter Icon
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`2. iconvideo renders with different colours 1`] = `
Array [
  <title>
    Video Icon
  </title>,
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`3. iconemail renders with different colours 1`] = `
Array [
  <title>
    Email Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`4. iconstar renders with different colours 1`] = `
Array [
  <title>
    Star Icon
  </title>,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`5. iconfacebook renders with different colours 1`] = `
Array [
  <title>
    Facebook Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`6. thetimeslogo renders with different colours 1`] = `
Array [
  <title>
    The Times
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;
